<resources>
    <string name="app_name">画面部品サンプル</string>
    <string name="tv_msg">お名前を入力してください。</string>
    <string name="input_text">入力してください</string>
    <string name="bt_save">保存</string>
    <string name="cd_drink">ドリンク</string>
    <string name="cd_food">フード</string>
    <string name="rd_male">男</string>
    <string name="rd_famale">女</string>
    <string-array name="sp_currylist">
        <item>ドライカレー</item>
        <item>カツカレー</item>
        <item>ビーフカレー</item>
        <item>チキンカレー</item>
        <item>シーフードカレー</item>
        <item>キーマカレー</item>
        <item>グリーンカレー</item>
    </string-array>
    <string-array name="lv_cocktailist">
        <item>ホワイトレディー</item>
        <item>バラライカ</item>
        <item>XYZ</item>
        <item>ニューヨーク</item>
        <item>マンハッタン</item>
        <item>ミシシッピミュール</item>
        <item>ブルーハワイ</item>
        <item>マイタイ</item>
        <item>マティーニ</item>
        <item>ブルームーン</item>
        <item>モヒート</item>
    </string-array>
</resources>
